<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="integrapp.tta.intel.ehu.eus.integrapp.Aukerak">

    <TextView
        android:text="@string/titulo_aukerak"
        android:gravity="center"
        android:textSize="50px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/but_o1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="mapa"/>
    <Button
        android:text="@string/but_o2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="jolasak"/>
    <Button
        android:text="@string/but_o3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="autoebaluazioa"/>

</LinearLayout>
