<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/menu_autoebaluazioa"
    tools:context=".vista.AutoebaluazioaActivity">

    <TextView
        android:text="@string/titulo_autoebaluazioa"
        android:textSize="50px"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/but_a1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="dibpal"/>
    <Button
        android:text="@string/but_a2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ahotsa"/>
    <Button
        android:text="@string/but_a3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="test"/>

</LinearLayout>
