<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="integrapp.tta.intel.ehu.eus.integrapp.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50px"
        android:gravity="center"
        android:text="@string/titulo_hizkuntzak"
        android:onClick="menu"/>
    <Button
        android:id="@+id/castellano"
        android:text="@string/but_h2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="menu"/>
    <Button
        android:id="@+id/ingles"
        android:text="@string/but_h1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="menu"/>

</LinearLayout>

