<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/test_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentador.AudioActivity"
    android:weightSum="1">

    <Button
        android:id="@+id/button_reproducir"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_reproducir"
        android:onClick="reproducirAudio"/>

    <Button
        android:id="@+id/button_record"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_record"
        android:onClick="grabarAudio"/>

    <Button
        android:id="@+id/button_reproducirgrabado"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buton_reproducirgrabado"/>

</LinearLayout>
