<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="integrapp.tta.intel.ehu.eus.integrapp.MapaActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="9"
        android:columnCount="3">

        <ImageButton
            android:id="@+id/patio"
            android:layout_width="111dp"
            android:layout_height="92dp"
            android:layout_row="0"
            android:layout_column="1"
            android:onClick="mapa"/>
        <TextView
            android:text="@string/patio"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_row="1"
            android:layout_column="1"/>
        <TextView
            android:text="bbbbb"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_row="2"
            android:layout_column="1"/>
        <ImageButton
            android:id="@+id/baño"
            android:layout_width="111dp"
            android:layout_height="92dp"
            android:layout_row="3"
            android:layout_column="0"
            android:onClick="mapa"/>
        <TextView
            android:text="@string/baño"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_row="4"
            android:layout_column="0"/>
        <TextView
            android:text="aaaaa"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_row="5"
            android:layout_column="0"/>
        <ImageButton
            android:id="@+id/comedor"
            android:layout_width="111dp"
            android:layout_height="92dp"
            android:layout_row="3"
            android:layout_column="2"
            android:onClick="mapa"/>
        <TextView
            android:text="@string/comedor"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_row="4"
            android:layout_column="2"/>
        <TextView
            android:text="aaaaa"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_row="5"
            android:layout_column="2"/>
        <ImageButton
            android:id="@+id/aula"
            android:layout_width="111dp"
            android:layout_height="92dp"
            android:layout_row="6"
            android:layout_column="0"
            android:onClick="mapa"/>
        <TextView
            android:text="@string/aula"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_row="7"
            android:layout_column="0"/>
        <TextView
            android:text="aaaaa"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_row="8"
            android:layout_column="0"/>
        <ImageButton
            android:id="@+id/gimnasio"
            android:layout_width="111dp"
            android:layout_height="92dp"
            android:layout_row="6"
            android:layout_column="2"
            android:onClick="mapa"/>
        <TextView
            android:text="@string/gimnasio"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_row="7"
            android:layout_column="2"/>
        <TextView
            android:text="@string/gimnasio"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_row="8"
            android:layout_column="2"/>

    </GridLayout>

</LinearLayout>
